# bbbs

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
BBBS_project/: asgi.py  settings.py  urls.py  wsgi.py
bbbs/: asgi.py  pytest.ini  settings.py  urls.py  wsgi.py
bbbs/afisha/: admin.py  apps.py  models.py  permission.py  serializers.py  views.py
bbbs/afisha/migrations/: 0001_initial.py  0002_eventparticipant.py
bbbs/common/: admin.py  apps.py  mixins.py  models.py  permission.py  permissions.py  serializers.py  views.py
bbbs/main/: views.py
bbbs/places/: admin.py  apps.py  models.py  serializers.py  views.py
bbbs/questions/: admin.py  apps.py  models.py  serializers.py  views.py
bbbs/rights/: admin.py  apps.py  models.py  serializers.py  views.py
bbbs/test/: tests.py
bbbs/tests/: test_model.py
cities/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
cities/migrations/: 0001_initial.py  0002_initial.py  0003_alter_profile_city.py  0004_delete_city.py
docs/: admin.md  backend-step1.md  backend-step2.md  backend-step3.md  calendar.md  faq.md  swagger.json
events/: admin.py  main_data.py  models.py  routers.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_initial.py  0003_alter_event_city.py
tests/: conftest.py  test_event_participants.py  test_events.py
tests/fixtures/: baker_recipes.py  fixtures.py  fixtures_user.py
user/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
(+7 files in other folders)
